<resources>
    <string name="app_name">Shopsup</string>
    <string name="stores">Stores</string>
    <string name="coupons">Coupons</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="free_shots">Free shots</string>
    <string name="change_location">Change location</string>
    <string name="edit_profile">Edit profile</string>
    <string name="activity_log">Activity log</string>
    <string name="contact_us">Contact us</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="dob">DOB</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="write_message">Write message</string>
    <string name="title">Shopsup</string>
    <string name="viaMobile">VIA MOBILE NUMBER</string>
    <string name="intro_title_three">Encash shots for coupons</string>
    <string name="intro_desc_three">Encash your shots from various redemption partners</string>
    <string name="intro_title_two">Earn shots</string>
    <string name="intro_desc_two">Earn shots on every visit and also for referring your friends</string>
    <string name="intro_title_one">Walk into your favorite store</string>
    <string name="intro_desc_one">Step into your preferred store from our wide range of partners </string>
    <string name="noNet">Oops, Your connection seems off!</string>
    <string name="noNetDes">Your internet needs to be turned ON for us to get started.</string>
    <string name="toggle_net">Please tap to retry</string>
    <string name="bysigning"><![CDATA[By signing up you agree to our T&C]]></string>
    <string name="sign_up_or_login">Sign Up or Login</string>
    <string name="prakash_bala">Prakash Bala</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="more">More</string>
    <string name="attach_an_image_optional">Attach image (Optional)</string>
    <string name="dummy_location">Orion mall</string>
    <string name="dummy_distance">2.5 km away</string>
    <string name="dummy_shot">500</string>
    <string name="dummy_address">127, Orion Mall, Dr Rajkumar Rd, Rajaji Nagar, Bengaluru, Karnataka 560055.</string>
    <string name="dummy_num">9677330606</string>
    <string name="dummy_time">Tues: 10AM to 10PM</string>
    <string name="open_now">Open now</string>
    <string name="dummy_description"><![CDATA[Allens solly is a premium brand for Men, Women and Youth.]]><u>Read More</u></string>
    <string name="about">About</string>
    <string name="you_need">You need</string>
    <string name="dummy_gift_card">Amazon Gift Card</string>
    <string name="dummy_amount">1000</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="filter">Filter</string>
    <string name="hint_search">Search Stores</string>
    <string name="noCoupon">You don’t have any coupons</string>
    <string name="noCouponDes">All your redeemed coupons will be saved here</string>
    <string name="redeem">Redeem</string>
    <string name="shots_required">Shots Required</string>
    <string name="present_counter">Present coupon at the counter</string>
    <string name="quantity_coupon">Select quantity of your coupon</string>
    <string name="add_16">Get 16 digit voucher code, and Pin via SMS</string>
    <string name="how_to_redeem">How to redeem?</string>
    <string name="need_shots">You need 150 shots more</string>
    <string name="earn_free_shots">Earn free shots</string>
    <string name="only_shots">You only have 350 shots</string>
    <string name="refer_your_friends">Refer your friends</string>
    <string name="ref_friend_desc"><![CDATA[Refer your friends & earn 10 shots on their first walk in.]]></string>
    <string name="start_typing">Start typing...</string>
    <string name="auto_detect_location">Auto detect</string>
    <string name="amazon_gift_card">Amazon Gift Card</string>
    <string name="dummy_amount_rupee">₹ 250/-</string>
    <string name="dummy_code">XX - XX - XX - XX - XX - XX</string>
    <string name="receive_pin">Didn’t receive pin?\nRESEND PIN</string>

    <string-array name="message_title">
        <item>--Select an Item--</item>
        <item>Store Related</item>
        <item>App related</item>
        <item>Misc</item>
    </string-array>
</resources>
