<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="25dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="16dp"
        >
        <!--CARD VIEW IS FOR MAKING IMAGE ROUND-->
        <android.support.v7.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="12dp"
            android:id="@+id/view2"
            app:cardCornerRadius="50dp"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9">

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/amazon"
            />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/amazon_gift_card"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:drawableLeft="@drawable/expiry_icon"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/expiry_icon"
            android:text="@string/dummy_time"
            android:textColor="@color/black20pc"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/dummy_amount_rupee"
            android:textColor="@color/black20pc"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/cardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_stroke_gap"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/dummy_code"
            android:textColor="@color/black20pc"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/didntReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/receive_pin"
            android:textColor="@color/black20pc"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:gravity="center"
            android:text="@string/terms_amp_conditions"
            android:textColor="#ff9a00"
            android:textSize="14sp"
            />


    </LinearLayout>

</android.support.v7.widget.CardView>