<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/requiredShotsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:text="@string/shots_required"
        android:textColor="@color/black20pc"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/couponLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_shots_icon_black_22dp"
        android:drawablePadding="3dp"
        android:drawableStart="@drawable/ic_shots_icon_black_22dp"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/dummy_amount"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/shotsLessText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/only_shots"
        android:textColor="@color/red"
        android:textSize="14sp"/>

    <ProgressBar
        android:id="@+id/seekBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="21dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="12dp"
        android:indeterminate="false"
        android:max="10"
        android:progress="5"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@android:color/transparent"
        />

    <TextView
        android:id="@+id/moreShots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="5dp"
        android:text="@string/need_shots"
        android:textColor="@color/black20pc"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/earnShots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingBottom="4dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/earn_free_shots"
        android:textColor="@color/black20pc"
        android:textSize="16sp"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:src="@color/black20pc"
                android:layout_width="70dp"
                android:layout_height="60dp"
               android:layout_margin="20dp"
                />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="20dp"
                android:text="@string/refer_your_friends"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="44dp"
                android:text="@string/ref_friend_desc"
                android:textColor="@color/black20pc"
                android:textSize="14sp"/>


        </android.support.v7.widget.CardView>
    </LinearLayout>
    </LinearLayout>