<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/mainlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >



            <TextView
                android:paddingTop="@dimen/about_top_pad"
                android:paddingLeft="@dimen/about_left_pad"
                android:drawableLeft="@drawable/store_location_icon"
                android:id="@+id/viewinmap"
                style="@style/AccountText"
                android:text="@string/dummy_address"
                />


            <TextView
                android:paddingTop="@dimen/about_top_pad"
                android:paddingLeft="@dimen/about_left_pad"
                android:drawableLeft="@drawable/store_phone_icon"
                style="@style/AccountText"
                android:clickable="true"
                android:text="@string/dummy_num"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:paddingTop="@dimen/about_top_pad"
                    android:paddingLeft="@dimen/about_left_pad"
                    android:drawableLeft="@drawable/store_time_icon"
                    style="@style/AccountText"
                    android:text="@string/dummy_time"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_now"
                    android:textColor="@android:color/holo_green_dark"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/about_top_pad"
                android:orientation="horizontal">
                <TextView

                    android:paddingLeft="@dimen/about_left_pad"
                    android:drawableLeft="@drawable/store_tags_icon"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="5dp"
                    />
            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/tagView"
               android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:alignContent="stretch"
                app:alignItems="stretch"
                app:flexWrap="wrap" />
            </LinearLayout>

            <TextView
                android:paddingTop="@dimen/about_top_pad"
                android:paddingLeft="@dimen/about_left_pad"
                style="@style/AccountText"
                android:textSize="@dimen/about_head_text"
                android:text="@string/about"
                />

            <TextView
                android:paddingLeft="@dimen/about_left_pad"
                style="@style/AccountText"
                android:clickable="true"
                android:textSize="@dimen/about_desc_text"
                android:text="@string/dummy_description"
                />
            <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->
           <!--STATIC UBER BUTTON-->
            <!--</RelativeLayout>-->

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <Button
        android:text="UBER BUTTON"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_margin="5dp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>