<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_no_network"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.hyperkonnect.shopsup.activities.Activity_NoNetwork">

    <TextView
        android:text="@string/noNetDes"
        android:textColor="@color/home_window_bg"
        android:layout_width="235dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/no_internet_icon"
        android:id="@+id/imageView3"
        android:layout_marginTop="78dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/noNet"
        android:textColor="@color/home_window_bg"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/toggle_net"
        android:layout_width="wrap_content"
        android:textColor="@color/home_window_bg"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="41dp"
        android:id="@+id/textView4" />
</RelativeLayout>
