<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/requiredShotsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:text="@string/shots_required"
        android:textColor="@color/black20pc"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/couponLimit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_shots_icon_black_22dp"
        android:drawablePadding="3dp"
        android:drawableStart="@drawable/ic_shots_icon_black_22dp"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/dummy_shot"
        android:textColor="@color/black20pc"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/redeem"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:background="@drawable/btn_yellow"
        android:clickable="true"
        android:gravity="center"
        android:minEms="5"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="8dp"
        android:text="@string/redeem"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/redeemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="10dp"
        android:text="@string/how_to_redeem"
        android:textColor="@color/black20pc"
        android:textSize="16sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/oval1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/bg_oval_grey"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/redeem_steps_text"/>

                <TextView
                    android:id="@+id/redeem1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/quantity_coupon"
                    android:textColor="@color/black20pc"
                    android:textSize="@dimen/redeem_steps_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/oval2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/bg_oval_grey"
                    android:gravity="center"
                    android:text="2"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/redeem_steps_text"/>

                <TextView
                    android:id="@+id/redeem2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/add_16"
                    android:textColor="@color/black20pc"
                    android:textSize="@dimen/redeem_steps_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/oval3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/bg_oval_grey"
                    android:gravity="center"
                    android:text="3"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/redeem_steps_text"/>

                <TextView
                    android:id="@+id/redeem3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/present_counter"
                    android:textColor="@color/black20pc"
                    android:textSize="@dimen/redeem_steps_text"/>

            </LinearLayout>

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:text="@string/terms_amp_conditions"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"/>
        </LinearLayout>


    </ScrollView>


</LinearLayout>
